test: Added tests to cover suspended-failed scenarios